--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,23 @@
 
   <build>
     <plugins>
+      <!-- Maven Compiler Plugin to set Java version -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+
       <!-- Maven WAR plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>
         <configuration>
-          <!-- Minimal web.xml path -->
           <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
         </configuration>
       </plugin>
@@ -37,4 +47,3 @@
   </build>
 
 </project>
-
